[package]
name = "clia-ntex-cors"
version = "0.4.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Cross-origin resource sharing (CORS) for ntex applications."
readme = "README.md"
keywords = ["ntex", "web"]
homepage = "https://ntex.rs"
repository = "https://github.com/clia/ntex-extras.git"
documentation = "https://docs.rs/clia-ntex-cors/"
license = "MIT"
edition = "2018"

[lib]
name = "clia_ntex_cors"
path = "src/lib.rs"

[dependencies]
ntex = "0.7.0"
derive_more = "0.99"
futures = "0.3"

[dev-dependencies]
ntex = { version = "0.7.0", features=["tokio"] }
